fix: text overflow on headings and p, a tags

--- a/styles/main.css
+++ b/styles/main.css
@@ -19,6 +19,17 @@ a {
   text-decoration: none;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+a,
+p {
+  overflow-wrap: break-word;
+}
+
 .window {
   height: 100%;
   display: flex;
